--- a/kevm-pyk/pyproject.toml
+++ b/kevm-pyk/pyproject.toml
@@ -13,7 +13,7 @@ authors = [
 [tool.poetry.dependencies]
 python = "^3.10"
 pathos = "*"
-kframework = "7.1.89"
+kframework = { git = "https://github.com/runtimeverification/k.git", branch="merge-node", subdirectory = "pyk" }
 tomlkit = "^0.11.6"
 
 [tool.poetry.group.dev.dependencies]
